--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
   <body>
     <h1>Testing testing 123</h1>
     <a href="http://www.google.com">a link</a>
+    <button>Hey</button>
+    <button>there</button>
   </body>
 
 </html>
